Switched default debug to false, fixed useless scrollbar in editor

--- a/frontend/css/codemirror.css
+++ b/frontend/css/codemirror.css
@@ -6,8 +6,8 @@
     background: transparent;
 }
 .CodeMirror-scroll {
-    overflow-y: hidden;
-    overflow-x: auto;
+    overflow-y: hidden!important;
+    overflow-x: auto!important;
     height:auto;
     margin-bottom: 0!important;
 }
